--- a/27.01.19.html
+++ b/27.01.19.html
@@ -99,7 +99,7 @@
 																<a class="nav-link" href="#" style="font-family:Playfair Display;color: #fff;text-transform: uppercase;">Works</a>
 															</li>
 															<li class="nav-item">
-																<a class="nav-link" href="#" style="font-family:Playfair Display;color: #fff;text-transform: uppercase;">People say</a>
+																<a class="nav-link" href="#peoplesay" style="font-family:Playfair Display;color: #fff;text-transform: uppercase;">People say</a>
 															</li>
 															<li class="nav-item">
 																<a class="nav-link" href="#contact" style="font-family:Playfair Display;color: white;text-transform: uppercase;">Contact</a>
@@ -266,7 +266,7 @@
 																	<div class="section6"></div>
 																	<div class="section7"></div>
 																	
-																	<div class="section8"style="padding-top:2%;padding-bottom:2%;">
+																	<div class="section8" id="peoplesay"style="padding-top:2%;padding-bottom:2%;">
                                     <div class="container"style="padding:2%;;">
                                       <div class="row">
                                         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
