--- a/27.01.19.html
+++ b/27.01.19.html
@@ -23,8 +23,8 @@
 	</script>
 </head>
 
-<body>
-	<div class="sliders align-self-center" id="Sliders">
+<body style="width:100vw;">
+	<div class="sliders align-self-center" id="Sliders"style="width:100%;margin:0;">
 		<div class="slider active">
 			<div class="linear align-self-cente">
 				<div class="box-header align-self-center">
@@ -61,7 +61,7 @@
 					<div class="Text_Logo align-self-center">Slider4</div>
 					<div class="line align-self-center"></div>
 					<div class="Text_Content align-self-center "> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos cupiditate, veniam inventore, quas consectetur eligendi. Minima velit nobis animi voluptates nisi totam, accusantium reprehenderit exercitationem..</div>
-					<button type="button" id="" class="btn btn-outline-default align-self-center wow heartBeat" data-wow-duration="5s" data-wow-delay="0.2s" data-wow-iteration="20" style="width:80px;border-radius:0px;z-index: 100;">
+					<button type="button" id="Learnbtn" class="btn btn-outline-default align-self-center wow heartBeat" data-wow-duration="5s" data-wow-delay="0.2s" data-wow-iteration="20" style="width:80px;border-radius:0px;z-index: 100;">
 				</div>
 			</div>
 		</div>
@@ -100,8 +100,8 @@
 		<video class="embed-responsive-16by9" id="vid" src="" style="min-height: 100%;
               min-width: 100%;
               background-size: cover;
-              position: absolute;z-index:0;position: absolute;opacity: 0;height: 100vh;width: 100vw;min-width: 100%; 
-              min-height: 100vh;;" width="100vw" height="100" controls="controls" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'></video>
+              position: absolute;z-index:0;position: absolute;opacity: 0;height: 100vh;width: 100%;min-width: 100%; 
+              min-height: 100vh;; margin-right: 0;" width="100%" height="100" controls="controls" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'></video>
 		<div class="video active" style="min-height: 100%;
               min-width: 100%;">
 			<div class="linear ">
