--- a/27.01.19.html
+++ b/27.01.19.html
@@ -61,7 +61,7 @@
 					<div class="Text_Logo align-self-center">Slider4</div>
 					<div class="line align-self-center"></div>
 					<div class="Text_Content align-self-center "> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos cupiditate, veniam inventore, quas consectetur eligendi. Minima velit nobis animi voluptates nisi totam, accusantium reprehenderit exercitationem..</div>
-					<button type="button" id="Learnbtn" class="btn btn-outline-default align-self-center wow heartBeat" data-wow-duration="5s" data-wow-delay="0.2s" data-wow-iteration="20" style="width:80px;border-radius:0px;z-index: 100;">
+					<button type="button" id="Learnbtn" class="btn btn-outline-primary align-self-center wow heartBeat" data-wow-duration="5s" data-wow-delay="0.2s" data-wow-iteration="20">Learn more</button>
 				</div>
 			</div>
 		</div>
